# codebase-to-prompt

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
tests/fixtures/: example.rs
