[package]
name = "codebase-to-prompt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
git2 = "0.20.2"
ignore = "0.4.23"
tempfile = "3.21.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
